# freeq-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  FREEQ_ENGINEERING_MASTER_SPEC.MD  README.md  SECURITY.md  docker-compose.yml  gateway.py  testplan.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Formula/: freeq.rb
cli/: Cargo.toml
cli/src/: main.rs
config/: gateway.toml
crates/freeq-api/: Cargo.toml
crates/freeq-api/src/: error.rs  lib.rs  models.rs  rate_limit.rs  router.rs  server.rs  state.rs
crates/freeq-api/src/handlers/: algorithm.rs  metrics.rs  mod.rs  peers.rs  status.rs  tunnels.rs
crates/freeq-auth/: Cargo.toml
crates/freeq-auth/src/: cloaking.rs  error.rs  handshake.rs  lib.rs  registry.rs
crates/freeq-config/: Cargo.toml
crates/freeq-config/src/: error.rs  lib.rs  node.rs  peer.rs
crates/freeq-crypto/: Cargo.toml
crates/freeq-crypto/src/: agility.rs  bulk.rs  error.rs  kdf.rs  kem.rs  lib.rs  sign.rs  types.rs
crates/freeq-crypto/tests/: security_audits.rs
crates/freeq-transport/: Cargo.toml
crates/freeq-transport/examples/: loopbackTest.rs
crates/freeq-transport/src/: connection.rs  endpoint.rs  error.rs  frame.rs  handshake.rs  lib.rs  peer.rs  pool.rs  session.rs  session_manager.rs
crates/freeq-transport/src/crates/freeq-transport/src/: session_manager.rs
crates/freeq-tunnel/: Cargo.toml
crates/freeq-tunnel/src/: error.rs  forward.rs  iface.rs  lib.rs  packet.rs  pipeline.rs  router.rs  service.rs
daemon/: Cargo.toml
daemon/src/: main.rs
dashboard/: index.html
deploy/ansible/: README.md  ansible.cfg
deploy/ansible/inventories/example/: hosts.yml
deploy/ansible/inventories/local/: hosts.yml
deploy/ansible/playbooks/: macos-local-test.yml  site.yml
deploy/ansible/roles/freeqd/defaults/: main.yml
deploy/ansible/roles/freeqd/handlers/: main.yml
deploy/ansible/roles/freeqd/tasks/: main.yml
deploy/ansible/roles/freeqd/templates/: freeq.toml.j2  freeqd.service.j2
docs/: CNAME  architecture.md  crypto-design.md  david-florida-mac-tunnel.md  engineering-hardening-log.md  enterprise-telemetry-cloud-path.md  homebrew-code-mill-plan.md  homebrew-install-maintenance-strategy.md  index.html  linux-install-code-mill-brief.md  local-ai-dev-cycle.md  perf-david-quickstart.md  perf-harness.md  perf-macos-quickstart.md  platform-installation-framework.md  setup-macos.md  simple-install.md  threat-model.md
docs/assets/: index-BbB4FHI-.css  index-DmLsYzhZ.js
scripts/: bench-throughput.sh  git-pre-commit.sh  install-hooks.sh  run-local-ai-stripes.sh  test-linux-deploy.sh  test-linux-install-flow.sh  test-setup-flow.sh
scripts/field/: freeq-david-connect-to-patrick-macos.sh  freeq-patrick-start-for-david-macos.sh
scripts/fixtures/linux-os-release/: alpine.os-release  arch.os-release  fedora.os-release  ubuntu.os-release  unknown.os-release
scripts/install/: freeq-install-linux.sh  freeq-install-macos.sh
scripts/perf/: freeq-bidirectional-smoke-macos.sh  freeq-blob-ab-test-macos.sh  freeq-perf-bundle-results.sh  freeq-perf-install-macos.sh  freeq-perf-preflight-macos.sh  freeq-perf-render-config.sh  freeq-perf-run.sh  freeq-perf-start-macos.sh
scripts/setup/: freeq-connect-macos.sh  freeq-render-config.sh  freeq-setup-macos.sh  freeq-start-macos.sh  freeq-stop-macos.sh  freeq-validate-peer-env.sh
tools/freeq-perf-identity/: Cargo.toml
tools/freeq-perf-identity/src/: main.rs
tools/freeq-soak-test/: Cargo.toml
tools/freeq-soak-test/src/: main.rs
