[package]
name        = "freeq"
description = "FreeQ CLI — manage the local freeqd daemon"

version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[[bin]]
name = "freeq"
path = "src/main.rs"

[dependencies]
freeq-config = { path = "../crates/freeq-config" }
freeq-api    = { path = "../crates/freeq-api" }

tokio       = { workspace = true }
clap        = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
