[package]
name        = "freeq-auth"
description = "ML-DSA identity, peer registry, and endpoint cloaking for FreeQ"

version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
freeq-crypto = { path = "../freeq-crypto" }
freeq-config = { path = "../freeq-config" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
uuid        = { workspace = true }
zeroize     = { workspace = true }
ipnetwork   = { workspace = true }
