[package]
name        = "freeq-config"
description = "TOML configuration, algorithm selection, and peer policies for FreeQ"

version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
base64      = { workspace = true }
ipnetwork   = { workspace = true }

[dev-dependencies]
tempfile = "3"
