[package]
name        = "freeq-crypto"
description = "PQC primitives, hybrid KEM, and crypto-agility traits for FreeQ"
readme      = "README.md"

version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
# PQC
ml-kem           = { workspace = true }
ml-dsa           = { workspace = true }
slh-dsa          = { workspace = true }

# Classical
x25519-dalek     = { workspace = true }
hkdf             = { workspace = true }
sha2             = { workspace = true }
aes-gcm          = { workspace = true }
chacha20poly1305 = { workspace = true }
rand             = { workspace = true }
rand_core        = { workspace = true }

# Security
zeroize          = { workspace = true }
secrecy          = { workspace = true }
constant_time_eq = { workspace = true }

# Utilities
bytes            = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
hex     = { workspace = true }
tokio   = { workspace = true }

[features]
default         = ["ml-kem-768", "ml-dsa-65"]
ml-kem-512      = []
ml-kem-768      = []
ml-kem-1024     = []
ml-dsa-44       = []
ml-dsa-65       = []
ml-dsa-87       = []
slh-dsa-backup  = []
