[package]
name        = "freeq-transport"
description = "QUIC session management and connection pool for FreeQ"

version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
freeq-crypto = { path = "../freeq-crypto" }

quinn       = { workspace = true }


tokio-util  = { workspace = true }
futures     = { workspace = true }
bytes       = { workspace = true }

thiserror   = { workspace = true }
anyhow      = { workspace = true }
rcgen       = "0.13"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }
rustls = { version = "0.23", features = ["ring"] }
rand = "0.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
rcgen = "0.13"
bytes = "1"
freeq-crypto = { path = "../freeq-crypto" }   # ← for PQC handshake
